--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,10 @@ theme:
 
 plugins:
   - search
+
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
